--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -17,17 +17,6 @@ on:
     paths:
       - '.github/docker/Dockerfile'
       - '.github/docker/entrypoint.sh'
-  pull_request:
-    branches:
-      - main
-    paths:
-      - '.github/docker/Dockerfile'
-      - '.github/docker/entrypoint.sh'
-
-env:
-  REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build_and_push_docker_image:
@@ -41,32 +30,16 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to the Container registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # This step generates tags based on the git context
-      # On main branch push -> tags as :main and :latest (if configured)
-      # On tag push (v1.0) -> tags as :1.0 and :latest
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - name: Build and Push
+        uses: docker/build-push-action@v6
         with:
           context: ./.github/docker
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/${{ github.repository }}:jazzy
