--- a/.github/workflows/build_all_docs.yml
+++ b/.github/workflows/build_all_docs.yml
@@ -3,7 +3,7 @@ name: Build Documentation
 on:
   push:
     branches:
-      - main
+      - github-pages
   pull_request:
     branches:
       - main
