[EQL] fix doc, cache for domain mappings.

--- a/krrood/doc/_toc.yml
+++ b/krrood/doc/_toc.yml
@@ -9,7 +9,7 @@ parts:
     - file: eql/intro
     - file: eql/writing_queries
     - file: eql/result_quantifiers
-    - file: eql/aggregators
+    - file: eql/result_processors
     - file: eql/logical_operators
     - file: eql/comparators
     - file: eql/domain_mapping
